--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <h1>Este es un sitio web con GitHub Pages</h1>
 <p>Y fue creado con amor para el Curso de Git y GitHub de Platzi</p>
-<p><img src"https://www.google.com/url?sa=i&url=https%3A%2F%2Fgiphy.com%2Fgifs%2Fmaite-perroni-nn7u6KVlcMRq&psig=AOvVaw2dd2EQIaSyqhGUKZHaoHcb&ust=1585589092138000&source=images&cd=vfe&ved=0CAIQjRxqFwoTCPihieiZwOgCFQAAAAAdAAAAABAN"/></p>
+<p><img src"https://i.pinimg.com/originals/6e/9f/f0/6e9ff0c5bcb49b7530326bdfcb8beef0.gif"/></p>
