Se agrego otro imagen y pie de página

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
 <h1>Este es un sitio web con GitHub Pages</h1>
 <p>Y fue creado con amor para el Curso de Git y GitHub de Platzi AL</p>
-<p><img src="https://i.imgur.com/PfA0M2o.gif" /></p>
+<p><img src="https://media1.tenor.com/images/72245c3752736366f1b11ef84dd96e3e/tenor.gif" /></p>
+<p>Annie</p>
